feat: add title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<HTML>
+<!DOCTYPE html>
 <HEAD>
+    <title>CVD equipment</title>
 </HEAD>
 <BODY>
 <p>Like in a good old days</p>
 </BODY
-</HTML>
+</html>
