update: add skeleton structure

--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
     <title>CVD equipment</title>
 </HEAD>
 <BODY>
-<p>Like in a good old days</p>
-</BODY
+    <header>
+        <h1>rusGraphene</h1>
+        <h2>CVD equipment</h2>
+    </header>
+    <nav>
+        <input type="text" id="ask-ai" placeholder="Ask AI about this"/>
+        <button>Contact</button>
+    </nav>
+    <main>
+        <section id="overview">
+
+        </section>
+        <section id="specifications">
+
+        </section>
+        <section id="">
+
+        </section>
+        <section id="purchase-details">
+
+        </section>
+        <footer>
+            
+        </footer>
+    </main>
+</BODY>
 </html>
