feat: add sections

--- a/index.html
+++ b/index.html
@@ -6,22 +6,28 @@
 <BODY>
     <header>
         <h1>rusGraphene</h1>
-        <h2>CVD equipment</h2>
     </header>
     <nav>
         <input type="text" id="ask-ai" placeholder="Ask AI about this"/>
         <button>Contact</button>
     </nav>
     <main>
-        <section id="overview">
-
+        <section id="hero">
         </section>
-        <section id="specifications">
 
-        </section>
-        <section id="">
+        <section id="products">
+            <div id="compare">
+<div id="compare-header">
+</div>
+<div id="compare-scroll">
+    <div id="reactor">
 
+    </div>
+    <div id=""
+</div>
+            </div>
         </section>
+
         <section id="purchase-details">
 
         </section>
